--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@environment-safe/template",
-    "version": "0.0.2",
+    "name": "esm-worker",
+    "version": "0.0.1",
     "type": "module",
     "main": "dist/index.mjs",
     "module": "src/index.mjs",
@@ -23,17 +23,17 @@
             "require": "./dist/index.cjs"
         }
     },
-    "homepage": "https://github.com/environment-safe/template",
-    "description": "A template for buildless module development",
+    "homepage": "https://github.com/environment-safe/esm-worker",
+    "description": "Use importmaps in a worker interface",
     "keywords": [],
-    "author": "Abbey Hawk Sparrow <@khrome> (http://patternweaver.com)",
+    "author": "Abbey Hawk Sparrow <khrome>(http://abbeyhawksparrow.com)",
     "contributors": [],
     "repository": {
         "type": "git",
-        "url": "git@github.com:environment-safe/template.git"
+        "url": "git@github.com:environment-safe/esm-worker.git"
     },
     "bugs": {
-        "url": "https://github.com/environment-safe/template/issues"
+        "url": "https://github.com/environment-safe/esm-worker/issues"
     },
     "moka": {
         "firefox": {
@@ -54,7 +54,7 @@
                 "type": "webkit"
             }
         },
-        "stub": "src/stub.mjs",
+        "stub": "node_modules/@open-automaton/moka/src/stub.mjs",
         "stubs": [
             "express",
             "module",
@@ -102,6 +102,7 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "browser-or-node": "^2.1.1"
+        "browser-or-node": "^2.1.1",
+        "web-worker": "^1.3.0"
     }
 }
